// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`offset and total passed 1`] = `
.c0 {
  display: inline-block;
  white-space: nowrap;
}

.c1 {
  margin-left: 10px;
}

<div
  class="c0"
>
  <button
    autocomplete="off"
    class="control button2 button2_view_classic button2_size_s button2_theme_action"
    data-lego="react"
    type="button"
  >
    <span
      class="button2__text"
      data-lego="react"
    >
      Показать ещё
    </span>
  </button>
  <span
    class="c1"
  >
    Показано 20 из 40 строк
  </span>
</div>
`;

exports[`only offset passed 1`] = `
.c0 {
  display: inline-block;
  white-space: nowrap;
}

<div
  class="c0"
>
  <button
    autocomplete="off"
    class="control button2 button2_view_classic button2_size_s button2_theme_action"
    data-lego="react"
    type="button"
  >
    <span
      class="button2__text"
      data-lego="react"
    >
      Показать ещё
    </span>
  </button>
</div>
`;

exports[`only total passed 1`] = `
.c0 {
  display: inline-block;
  white-space: nowrap;
}

<div
  class="c0"
>
  <button
    autocomplete="off"
    class="control button2 button2_view_classic button2_size_s button2_theme_action"
    data-lego="react"
    type="button"
  >
    <span
      class="button2__text"
      data-lego="react"
    >
      Показать ещё
    </span>
  </button>
</div>
`;

exports[`progress 1`] = `
.c0 {
  display: inline-block;
  white-space: nowrap;
}

<div
  class="c0"
>
  <button
    aria-disabled="true"
    autocomplete="off"
    class="control button2 control_disabled_yes button2_disabled_yes button2_view_classic button2_size_s button2_theme_action button2_progress_yes"
    data-lego="react"
    disabled=""
    type="button"
  >
    <span
      class="button2__text"
      data-lego="react"
    >
      Показать ещё
    </span>
  </button>
</div>
`;

exports[`with defaults 1`] = `
.c0 {
  display: inline-block;
  white-space: nowrap;
}

<div
  class="c0"
>
  <button
    autocomplete="off"
    class="control button2 button2_view_classic button2_size_s button2_theme_action"
    data-lego="react"
    type="button"
  >
    <span
      class="button2__text"
      data-lego="react"
    >
      Показать ещё
    </span>
  </button>
</div>
`;
